# modelexample

./: .gitignore  README.md  manage.py  pyproject.toml
modelexample/: asgi.py  settings.py  urls.py  wsgi.py
modelexample/musician/: apps.py  models.py
modelexample/musician/migrations/: 0001_initial.py
modelexample/school/: admin.py  apps.py  models.py
modelexample/school/migrations/: 0001_initial.py  0002_delete_course_delete_student.py  0003_initial.py  0004_enrollment_unique_student_course.py
modelexample/simple/: admin.py  apps.py  models.py
modelexample/simple/migrations/: 0001_initial.py  0002_character_movie.py  0003_remove_movie_characters_delete_character_and_more.py  0004_movie_character.py
