[tool.poetry]
name = "modelexample"
version = "0.1.0"
description = "Django model example"
authors = ["Louis Agyapong <47106199+louis-agyapong@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
djangorestframework = "^3.14.0"
django = "^4.1.5"
black = "^22.12.0"
mypy = "^0.991"
django-stubs = "^1.13.1"
django-extensions = "^3.2.1"
ipython = "^8.7.0"
python-decouple = "^3.6"
dj-database-url = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
